# pacs_photo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.ini.example  docker-compose.yml  photo_pacs_PRD.md  pyproject.toml
docs/: assumptions.md  guide.md  release.md  runbook.md
docs/decisions/: 20251224-core-architecture.md  20260204-packaging.md
scripts/: package_windows.ps1
specs/: packaging.md  upload_gateway.md
src/photo_pacs/: __main__.py  cli.py  logging.py  main.py  metrics.py  middleware.py  settings.py
src/photo_pacs/api/: schemas.py
src/photo_pacs/api/routes/: ocr.py  pacs.py  settings.py  studies.py
src/photo_pacs/his/: __init__.py  base.py  http.py  mock.py
src/photo_pacs/pacs/: __init__.py  base.py  cstore.py  dicomweb.py  mock.py
src/photo_pacs/services/: conversion.py  patient_id_ocr.py  settings_store.py
src/photo_pacs/storage/: local.py
tests/: conftest.py  test_config_ini.py  test_dicomweb.py  test_health_metrics.py  test_ocr_accuracy.py  test_pacs_echo.py  test_patient_id_ocr.py  test_scanner_ocr_params.py  test_settings.py  test_studies.py  test_taiwan_id.py
tests/fixtures/id_cards/: README.md
web/: app.js  index.html  manifest.json  styles.css  sw.js
