[project]
name = "photo_pacs"
version = "0.1.1"
description = "Temporary gateway for mobile image upload to PACS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "pydicom>=2.4.0",
  "pynetdicom>=2.0.0",
  "python-multipart>=0.0.9",
  "Pillow>=10.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
photo-pacs = "photo_pacs.cli:main"

[project.optional-dependencies]
ocr = [
  # 健保卡 OCR：統一 rapidocr 套件（ONNX Runtime 後端），免裝 paddlepaddle（Docker/Linux 較穩）。
  # 需 3.9+ 以支援 PP-OCRv6 medium（3.9.0 起每階段須同時指定 ocr_version 與 model_type）；
  # 鎖 <4 防下一個 major 版本破壞性變更。
  "rapidocr>=3.9,<4",
  "onnxruntime>=1.17.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
  "black>=24.0.0",
  "respx>=0.21.0",
]
packaging = [
  "pyinstaller>=6.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
